--- a/helloworld.html
+++ b/helloworld.html
@@ -6,4 +6,13 @@
 good evening
 </h1>
 </body>
+
 </html>
+<script>
+    function demo()
+    {
+        alert('first attempt....')
+    }
+
+    
+    </script>
